Add support for Cryptography Provider v2 in Token Profile Management